Fix main scrollbar size

--- a/resources/assets/styles/app.scss
+++ b/resources/assets/styles/app.scss
@@ -36,7 +36,7 @@ body {
     font-family: $font-family;
   }
 
-  @include scrollbar(14px);
+  @include scrollbar(8px);
 
   code, pre {
     @include font-optimize;
